--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="data engineering, consulting, firm, Canada, data pipelines, data solutions, architect, cloud, AWS, Azure, Hexcale, freelance">
         <meta name="author" content="Hexcale">
         <title>Data Engineering Consulting Firm Canada</title>
-        
+        <link rel="icon" type="image/x-icon" href="img/favicon.png">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://www.hexcale.ca">
